styles/aqua-tab-bar.less
@import 'ui-variables';
@import 'syntax-variables';

@tab-padding: 6px;

/*
 * aquaTabBar.enable - Apple-like tab bar
 *
 * To do:
 *   - fix light-on-dark (and dark-on-light) themes
 */

.atom-ui-tweaks--other--enable-staging-tweaks {
  &.theme-one-dark-ui.theme-one-dark-ui.theme-one-dark-ui,
  &.theme-one-light-ui.theme-one-light-ui.theme-one-light-ui {
    // This doesn't look right
    // .inset-panel {
    //   background: linear-gradient(
    //     to bottom,
    //     darken(@syntax-background-color, 5%),
    //     darken(@syntax-background-color, 10%) 120%
    //   );
    // }

    .tab-bar {
      & {
        justify-content: center;
        border: solid @tab-padding transparent;
        border-right-width: @tab-padding * 8;
        border-left-width: @tab-padding * 8;
        border-top-width: @tab-padding + 2px;
        box-sizing: content-box;
        box-shadow: none;
      }

      & .tab,
      & .tab:last-child {
        cursor: pointer;
        box-shadow: inset 0 1px 0 darken(@syntax-background-color, 1%),
          inset 0 -1px 0 @tab-border-color;
      }

      & .tab.active {
        background: lighten(@syntax-background-color, 3%);
        box-shadow: inset 0 1px 0 lighten(@syntax-background-color, 5%),
          inset 0 -1px 0 @tab-border-color;
        font-weight: bold;
      }

      & .tab:not(.active) {
        background: fade(@syntax-background-color, 50%);
      }

      & .tab:last-child {
        margin-right: 0;
        border-top-right-radius: 4px !important;
        border-bottom-right-radius: 4px !important;
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
      }

      & .tab:first-child {
        margin-left: 0;
        border-top-left-radius: 4px;
        border-bottom-left-radius: 4px;
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
      }
    }
  }

  // Border below the tab bar
  .item-views {
    border-top: solid 1px @panel-heading-border-color;
  }
}

/*
 * aquaTabBar - Play nicely with status on top
 */

.atom-ui-tweaks--other--enable-staging-tweaks {
  &.theme-one-dark-ui,
  &.theme-one-light-ui {
    &.atom-ui-tweaks--status--bar-position--top {
      .status-bar {
        margin-bottom: -0.5 * @tab-padding;
      }
    }

    &.atom-ui-tweaks--status--extra-padding.atom-ui-tweaks--status--bar-position--top {
      .status-bar {
        margin-bottom: -1 * @tab-padding;
      }
    }
  }
}

